--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "generate-icons": "node generate-icons.js"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -28,6 +29,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "sharp": "^0.34.5",
     "typescript": "5.0.4"
   },
   "engines": {
