--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
 name: Build and Release
+
 on:
   push:
     branches:
@@ -12,6 +13,10 @@ on:
         description: 'Release version (e.g., 1.0.0)'
         required: false
         default: 'auto'
+
+permissions:
+  contents: write
+
 jobs:
   build-android:
     runs-on: ubuntu-latest
@@ -146,10 +151,3 @@ jobs:
             android/app/build/outputs/apk/debug/app-debug.apk
             android/app/build/outputs/apk/release/*.apk
           fail_on_unmatched_files: false
-  # Optional: Add iOS build job if needed
-  # build-ios:
-  #   runs-on: macos-latest
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
-  #     # Add iOS build steps here
